# navi-v2

./: .gitignore  LICENSE  README.md  rosLaunch.sh
agent/: agent.py  display.py
control/: control.py  planning.py  ucs.cu  ucs.h
device/: CMakeLists.txt  devhub.py  zed.py
device/arduino/: JaguarController.ino
device/arduino/navi_v2-Mega/: MPU6050.ino  compass.cpp  navi_v2-Mega.ino
device/arduino/navi_v2-Uno/: navi_v2-Uno.ino
device/arduino/navi_v2-Uno/navi_v2-Uno/: navi_v2-Uno.ino
device/arduino/navi_v2ArduinoControl/: navi_v2ArduinoControl.ino
device/src/: libzed.h  zed.cpp
examples/: gaussMake.py  newtest.py  oldTestGridMap.py  path.txt  projectionTest.py  testChili.py  testCompass.py  testControl.py  testDepth.py  testDevices.py  testDistributions.py  testGPS.py  testGridMap.py  testLocalization.py  testObjectDetector.py  testParticleFilter.py  testPerceptbox.py  testPerception.py  testPlanner.py  testProjectedMesh.py  testSensors.py  testVelControl.py  testZed.py  testZedMesh.py  testZedPose.py  testdevices.py
perception/: Makefile  README.md  chili.cpp  chili.h  chili.py  gridmap.py  localizer.py  objectdetector.py  pathLoader.py  perceptbox.py  perception.py  pfilter.py  projectedMesh.py
perception/sethrh-chilipy-c4c1ee324a9e/: .hg_archival.txt  LICENSE.txt  chilipy.pyx  readme.md  setup.py
